--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_wheres_my_car_main">WheresMyCarMainActivity</string>
     <string name="title_activity_what_happened_today_main">WhatHappenedTodayMainActivity</string>
     <string name="title_activity_whats_this_main">WhatsThisMainActivity</string>
+    <string name="title_activity_what_happened_today_note">WhatHappenedTodayNoteActivity</string>
 
 </resources>
