--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_what_happened_today_main">WhatHappenedTodayMainActivity</string>
     <string name="title_activity_whats_this_main">WhatsThisMainActivity</string>
     <string name="title_activity_what_happened_today_note">WhatHappenedTodayNoteActivity</string>
+    <string name="title_activity_what_happend_today_note">WhatHappendTodayNoteActivity</string>
 
 </resources>
