--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="title_activity_whats_this_main">WhatsThisMainActivity</string>
     <string name="title_activity_what_happened_today_note">WhatHappenedTodayNoteActivity</string>
     <string name="title_activity_what_happend_today_note">WhatHappendTodayNoteActivity</string>
+    <string name="title_activity_wheres_my_car_travel">WheresMyCarTravelActivity</string>
 
 </resources>
